objects/wkfsl__Shift_Management_Metric__c.object
<CustomObject>
    <fields>
        <fullName>wkfsl__Allocated_Occupancy__c</fullName>
        <label>Planned Occupancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkfsl__Assigned_Shifts__c</fullName>
        <label>Assigned Shifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkfsl__Available_Employees__c</fullName>
        <label>Available Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkfsl__Calculated_as_of__c</fullName>
        <label>Calculation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkfsl__Date__c</fullName>
        <label>Metric Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wkfsl__Eligible_Employees__c</fullName>
        <label>Eligible Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkfsl__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipName>Shift_Mannagement_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkfsl__Maximum_Occupancy__c</fullName>
        <formula>wkfsl__Service_Territory__r.wkfsl__Maximum_Occupancy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The value in this field comes from Maximum Occupancy of the Service Territory you&apos;ve chosen.</inlineHelpText>
        <label>Maximum Occupancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkfsl__Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipName>Shift_Mannagement_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkfsl__Total_Shifts__c</fullName>
        <label>Total Shifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Shift Management Metric</label>
    <listViews>
        <fullName>wkfsl__All</fullName>
        <columns>NAME</columns>
        <columns>wkfsl__Service_Territory__c</columns>
        <columns>wkfsl__Location__c</columns>
        <columns>wkfsl__Date__c</columns>
        <columns>wkfsl__Available_Employees__c</columns>
        <columns>wkfsl__Eligible_Employees__c</columns>
        <columns>wkfsl__Maximum_Occupancy__c</columns>
        <columns>wkfsl__Allocated_Occupancy__c</columns>
        <columns>wkfsl__Assigned_Shifts__c</columns>
        <columns>wkfsl__Total_Shifts__c</columns>
        <columns>wkfsl__Calculated_as_of__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shift Management Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shift Management Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>